--- a/.github/workflows/combine-scripts.yml
+++ b/.github/workflows/combine-scripts.yml
@@ -14,21 +14,23 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Combine PowerShell scripts
+      shell: pwsh
       run: |
-        $sourceDirectory = "Public"
-        $outputFilePath = "EasyWarrantyCheck_RMM.ps1"
-
+        $sourceDirectory = 'Public'
+        $outputFilePath = 'EasyWarrantyCheck_RMM.ps1'
+        
         $scriptFiles = Get-ChildItem -Path $sourceDirectory -Filter *.ps1 -Recurse
-
-        $combinedContent = ""
-
+        
+        $combinedContent = ''
+        
         foreach ($file in $scriptFiles) {
             $fileContent = Get-Content $file.FullName -Raw
             $combinedContent += $fileContent + "`n`n"
         }
+        
         # Add Get-Warranty function call at the end of the script
-        $combinedContent += "Get-Warranty`n"
-
+        $combinedContent += 'Get-Warranty`n'
+        
         $combinedContent | Out-File -FilePath $outputFilePath -Force
-
+        
         Write-Host "Combined script saved to: $outputFilePath"
