--- a/.github/workflows/combine-scripts.yml
+++ b/.github/workflows/combine-scripts.yml
@@ -18,7 +18,6 @@ jobs:
       run: |
         $sourceDirectory = 'Public'
         $outputFilePath = 'EasyWarrantyCheck_RMM.ps1'
-        $repositoryPath = $GITHUB_WORKSPACE
 
         $scriptFiles = Get-ChildItem -Path $sourceDirectory -Filter *.ps1 -Recurse
         
@@ -42,10 +41,10 @@ jobs:
         $combinedContent += 'Get-Warranty'
         
         # Check if the combined content is different from the existing content
-        $existingContent = Get-Content (Join-Path $repositoryPath $outputFilePath) -Raw -ErrorAction SilentlyContinue
+        $existingContent = Get-Content $outputFilePath -Raw -ErrorAction SilentlyContinue
                 
         if ($existingContent -ne $combinedContent) {
-            $combinedContent | Out-File -FilePath (Join-Path $repositoryPath $outputFilePath) -Force
+            $combinedContent | Out-File -FilePath $outputFilePath -Force
             Write-Host "Combined script saved to: $outputFilePath"
         } else {
             Write-Host "Combined script unchanged. No commit or push needed."
