--- a/.github/workflows/combine-scripts.yml
+++ b/.github/workflows/combine-scripts.yml
@@ -55,5 +55,5 @@ jobs:
         git config --local user.email "actions@github.com"
         git config --local user.name "GitHub Actions"
         git add .
-        git commit -m "Combine PowerShell Functions into 1 script"
+        git commit -m "Combine PowerShell Functions into 1 script for RMM"
         git push
